--- a/React-Projects/DOMProjects/Sum/index.html
+++ b/React-Projects/DOMProjects/Sum/index.html
@@ -1,16 +1,19 @@
 <html>
     <script>
-        function populateDiv(){
-         const a=document.getElementById("first").value;
-         const b=document.getElementById("second").value;
-         const element = document.getElementById("finalSum")
-         element.innerHTML= parseInt(a) + parseInt(b)
+        async function populateDiv() {
+         const p=document.getElementById("P").value;
+         const r=document.getElementById("R").value;
+         const t=document.getElementById("T").value;
+         const response = await fetch("https://sum-server.100xdevs.com/interest?principle="+p+"&rate="+r+"&time="+t)
+         const ans = await response.text()
+         document.getElementById("finalSum").innerHTML=ans;
         }
     </script>
     <body>
-        <input id="first" type="text" placeholder="First"></input> <br></br>
-        <input id="second" type="text" placeholder="Second"></input> <br></br>
-        <button onclick="populateDiv()">Calculate Sum</button> <br></br>
-        <div id="finalSum"></div>
+        <input id="P" type="text" placeholder="Principle"></input> <br></br>
+        <input id="R" type="text" placeholder="Rate"></input> <br></br>
+        <input id="T" type="text" placeholder="Time"></input> <br></br>
+        <button onclick="populateDiv()">Interest</button> <br></br>
+        <div id="finalSum">Interest=</div>
     </body>
 </html>
