--- a/React-Projects/DOMProjects/TODO/index.html
+++ b/React-Projects/DOMProjects/TODO/index.html
@@ -1,18 +1,43 @@
 <html>
     <script>
+        let globalId = 1
+
+        function markAsDone(todoId) {
+            const parent = document.getElementById(todoId)
+            parent.children[2].innerHTML="Done!"
+        }
+
+        function createChild(title, description, id) {
+            const child = document.createElement("div")
+            const firstGrandParent = document.createElement("div")
+            firstGrandParent.innerHTML = title
+            const secondGrandParent = document.createElement("div")
+            secondGrandParent.innerHTML = description
+            const thirdGrandParent = document.createElement("button")
+            thirdGrandParent.innerHTML = "Mark as done"
+            thirdGrandparent.setAttribute("onClick", `markasdone(${id})`)
+            
+            child.appendChild(firstGrandParent)
+            child.appendChild(secondGrandParent)
+            child.appendChild(thirdGrandParent)
+            child.setAttribute("id", id)
+            return child;
+        }
+
         function addTodo() {
             const title = document.getElementById("title").value;
             const description = document.getElementById("description").value
-            const childDiv = document.createElement("div")
-            outerDiv.innerHTML=title
-            document.getElementById("container").appendChild(childDiv)     
+            const parent = document.getElementById("todos")
+            parent.appendChild(createChild(title, description, globalId++))     
         }
+        
     </script>
 
-    <div>
-        <input id="title" type="text" placeholder="title"></input><br/>
-        <input id="description" type="text" placeholder="description"></input><br/>
+    <body>
+        <input id="title" type="text" placeholder=" Todo title"></input><br/>
+        <input id="description" type="text" placeholder="Todo description"></input><br/>
         <button onclick="addTodo()">Add Todo</button>
-        <div id="container"></div>
-    </div>
+        <div id="todos"></div>
+    </body>
+
 </html>
